# scrooge

./: .gitignore  Readme.md  __main__.py  analysis.py  commands.py  config.py  database.py  plan.py.template  pyproject.toml  requirements.txt  tox.ini
src/: __main__.py  analysis.py  commands.py  config.py  database.py  main.py
src/util/: files.py  parse.py  tags.py
tests/: test_config.py  test_database.py
util/: __init__.py  files.py  parse.py  tags.py  types.py
