[project]
name = "scrooge"
version = "0.0.1"
description = "A CLI based tool to keep track of your finances"
readme = "Readme.md"
requires-python = ">=3.9"
license = {file = "License.txt"}
keywords = ["finances", "tools", "cli"]
authors = [
  { name = "Johannes Huwald", email = "hey@jhuwald.com" }
]
maintainers = [
  { name = "Johannes Huwald", email = "hey@jhuwald.com" }
]
dependencies = [
  "PyYAML",
  "rich",
  "SQLAlchemy"
]

[project.scripts]
scrooge = "main:main"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
